--- a/.project
+++ b/.project
@@ -32,6 +32,11 @@
 	</natures>
 	<linkedResources>
 		<link>
+			<name>GyverButton V3.8</name>
+			<type>2</type>
+			<location>D:/Dropbox/Actual/Drivers/Gyver/GyverButton V3.8</location>
+		</link>
+		<link>
 			<name>Micros</name>
 			<type>2</type>
 			<location>D:/Dropbox/Actual/Drivers/libs/Micros</location>
