--- a/.cproject
+++ b/.cproject
@@ -37,6 +37,7 @@
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/STM32_PowerStation/logUART}&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:D:\Dropbox\Actual\Drivers\libs\Micros}&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/STM32_PowerStation/Micros}&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/STM32_PowerStation/uTFT2/FontGFX}&quot;"/>
 								</option>
 								<inputType id="com.st.stm32cube.ide.mcu.gnu.managedbuild.tool.assembler.input.2030614636" superClass="com.st.stm32cube.ide.mcu.gnu.managedbuild.tool.assembler.input"/>
 							</tool>
@@ -57,6 +58,7 @@
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/STM32_PowerStation/uTFT2}&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/STM32_PowerStation/logUART}&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/STM32_PowerStation/Micros}&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/STM32_PowerStation/uTFT2/FontGFX}&quot;"/>
 								</option>
 								<inputType id="com.st.stm32cube.ide.mcu.gnu.managedbuild.tool.c.compiler.input.c.1446493452" superClass="com.st.stm32cube.ide.mcu.gnu.managedbuild.tool.c.compiler.input.c"/>
 							</tool>
@@ -78,6 +80,7 @@
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/STM32_PowerStation/logUART}&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:D:\Dropbox\Actual\Drivers\libs\Micros}&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/STM32_PowerStation/Micros}&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/STM32_PowerStation/uTFT2/FontGFX}&quot;"/>
 								</option>
 								<inputType id="com.st.stm32cube.ide.mcu.gnu.managedbuild.tool.cpp.compiler.input.cpp.1466469319" superClass="com.st.stm32cube.ide.mcu.gnu.managedbuild.tool.cpp.compiler.input.cpp"/>
 							</tool>
@@ -117,6 +120,7 @@
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:D:\Dropbox\Actual\Drivers\libs\Micros}&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/STM32_PowerStation/Micros}&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/STM32_PowerStation/GyverButton V3.8}&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/STM32_PowerStation/uTFT2/FontGFX}&quot;"/>
 								</option>
 								<inputType id="com.st.stm32cube.ide.mcu.gnu.managedbuild.tool.assembler.input.1879031631" superClass="com.st.stm32cube.ide.mcu.gnu.managedbuild.tool.assembler.input"/>
 							</tool>
@@ -131,6 +135,7 @@
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/STM32_PowerStation/logUART}&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/STM32_PowerStation/Micros}&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/STM32_PowerStation/GyverButton V3.8}&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/STM32_PowerStation/uTFT2/FontGFX}&quot;"/>
 								</option>
 								<inputType id="com.st.stm32cube.ide.mcu.gnu.managedbuild.tool.c.compiler.input.c.1769888131" superClass="com.st.stm32cube.ide.mcu.gnu.managedbuild.tool.c.compiler.input.c"/>
 							</tool>
@@ -146,6 +151,7 @@
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:D:\Dropbox\Actual\Drivers\libs\Micros}&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/STM32_PowerStation/Micros}&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/STM32_PowerStation/GyverButton V3.8}&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/STM32_PowerStation/uTFT2/FontGFX}&quot;"/>
 								</option>
 								<inputType id="com.st.stm32cube.ide.mcu.gnu.managedbuild.tool.cpp.compiler.input.cpp.1701130347" superClass="com.st.stm32cube.ide.mcu.gnu.managedbuild.tool.cpp.compiler.input.cpp"/>
 							</tool>
@@ -162,12 +168,12 @@
 						</toolChain>
 					</folderInfo>
 					<sourceEntries>
-						<entry flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name="GyverButton V3.8"/>
-						<entry flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name="logUART"/>
-						<entry excluding="FontGFX|FontMicroElectronika|Transformation|Video|FontSmooth" flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name="uTFT2"/>
 						<entry flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name="Core"/>
 						<entry flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name="Drivers"/>
+						<entry flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name="GyverButton V3.8"/>
 						<entry flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name="Micros"/>
+						<entry flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name="logUART"/>
+						<entry excluding="FontMicroElectronika|Transformation|Video|FontSmooth" flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name="uTFT2"/>
 					</sourceEntries>
 				</configuration>
 			</storageModule>
@@ -204,6 +210,7 @@
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/STM32_PowerStation/logUART}&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:D:\Dropbox\Actual\Drivers\libs\Micros}&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/STM32_PowerStation/Micros}&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/STM32_PowerStation/uTFT2/FontGFX}&quot;"/>
 								</option>
 								<inputType id="com.st.stm32cube.ide.mcu.gnu.managedbuild.tool.assembler.input.649695025" superClass="com.st.stm32cube.ide.mcu.gnu.managedbuild.tool.assembler.input"/>
 							</tool>
@@ -224,6 +231,7 @@
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/STM32_PowerStation/logUART}&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:D:\Dropbox\Actual\Drivers\libs\Micros}&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/STM32_PowerStation/Micros}&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/STM32_PowerStation/uTFT2/FontGFX}&quot;"/>
 								</option>
 								<inputType id="com.st.stm32cube.ide.mcu.gnu.managedbuild.tool.c.compiler.input.c.1250514288" superClass="com.st.stm32cube.ide.mcu.gnu.managedbuild.tool.c.compiler.input.c"/>
 							</tool>
@@ -244,6 +252,7 @@
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/STM32_PowerStation/logUART}&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:D:\Dropbox\Actual\Drivers\libs\Micros}&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/STM32_PowerStation/Micros}&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/STM32_PowerStation/uTFT2/FontGFX}&quot;"/>
 								</option>
 								<inputType id="com.st.stm32cube.ide.mcu.gnu.managedbuild.tool.cpp.compiler.input.cpp.298323913" superClass="com.st.stm32cube.ide.mcu.gnu.managedbuild.tool.cpp.compiler.input.cpp"/>
 							</tool>
@@ -281,6 +290,7 @@
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:D:\Dropbox\Actual\Drivers\libs\Micros}&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/STM32_PowerStation/Micros}&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/STM32_PowerStation/GyverButton V3.8}&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/STM32_PowerStation/uTFT2/FontGFX}&quot;"/>
 								</option>
 								<inputType id="com.st.stm32cube.ide.mcu.gnu.managedbuild.tool.assembler.input.1157382198" superClass="com.st.stm32cube.ide.mcu.gnu.managedbuild.tool.assembler.input"/>
 							</tool>
@@ -296,6 +306,7 @@
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:D:\Dropbox\Actual\Drivers\libs\Micros}&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/STM32_PowerStation/Micros}&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/STM32_PowerStation/GyverButton V3.8}&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/STM32_PowerStation/uTFT2/FontGFX}&quot;"/>
 								</option>
 								<inputType id="com.st.stm32cube.ide.mcu.gnu.managedbuild.tool.c.compiler.input.c.2093201422" superClass="com.st.stm32cube.ide.mcu.gnu.managedbuild.tool.c.compiler.input.c"/>
 							</tool>
@@ -311,6 +322,7 @@
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:D:\Dropbox\Actual\Drivers\libs\Micros}&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/STM32_PowerStation/Micros}&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/STM32_PowerStation/GyverButton V3.8}&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/STM32_PowerStation/uTFT2/FontGFX}&quot;"/>
 								</option>
 								<inputType id="com.st.stm32cube.ide.mcu.gnu.managedbuild.tool.cpp.compiler.input.cpp.1756062824" superClass="com.st.stm32cube.ide.mcu.gnu.managedbuild.tool.cpp.compiler.input.cpp"/>
 							</tool>
@@ -366,6 +378,7 @@
 								<option IS_BUILTIN_EMPTY="false" IS_VALUE_EMPTY="false" id="com.st.stm32cube.ide.mcu.gnu.managedbuild.tool.assembler.option.includepaths.612599345" name="Include paths (-I)" superClass="com.st.stm32cube.ide.mcu.gnu.managedbuild.tool.assembler.option.includepaths" valueType="includePath">
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:D:\Dropbox\Actual\Drivers\libs\Micros}&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/STM32_PowerStation/Micros}&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/STM32_PowerStation/uTFT2/FontGFX}&quot;"/>
 								</option>
 								<inputType id="com.st.stm32cube.ide.mcu.gnu.managedbuild.tool.assembler.input.1393840546" superClass="com.st.stm32cube.ide.mcu.gnu.managedbuild.tool.assembler.input"/>
 							</tool>
@@ -385,6 +398,7 @@
 									<listOptionValue builtIn="false" value="../Drivers/CMSIS/Include"/>
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:D:\Dropbox\Actual\Drivers\libs\Micros}&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/STM32_PowerStation/Micros}&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/STM32_PowerStation/uTFT2/FontGFX}&quot;"/>
 								</option>
 								<inputType id="com.st.stm32cube.ide.mcu.gnu.managedbuild.tool.c.compiler.input.c.1601021489" superClass="com.st.stm32cube.ide.mcu.gnu.managedbuild.tool.c.compiler.input.c"/>
 							</tool>
@@ -406,6 +420,7 @@
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/${ProjName}/logUART}&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:D:\Dropbox\Actual\Drivers\libs\Micros}&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/STM32_PowerStation/Micros}&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/STM32_PowerStation/uTFT2/FontGFX}&quot;"/>
 								</option>
 								<inputType id="com.st.stm32cube.ide.mcu.gnu.managedbuild.tool.cpp.compiler.input.cpp.1954111292" superClass="com.st.stm32cube.ide.mcu.gnu.managedbuild.tool.cpp.compiler.input.cpp"/>
 							</tool>
@@ -441,6 +456,7 @@
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:D:\Dropbox\Actual\Drivers\libs\Micros}&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/STM32_PowerStation/Micros}&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/STM32_PowerStation/GyverButton V3.8}&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/STM32_PowerStation/uTFT2/FontGFX}&quot;"/>
 								</option>
 								<inputType id="com.st.stm32cube.ide.mcu.gnu.managedbuild.tool.assembler.input.176237793" superClass="com.st.stm32cube.ide.mcu.gnu.managedbuild.tool.assembler.input"/>
 							</tool>
@@ -454,6 +470,7 @@
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:D:\Dropbox\Actual\Drivers\libs\Micros}&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/STM32_PowerStation/Micros}&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/STM32_PowerStation/GyverButton V3.8}&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/STM32_PowerStation/uTFT2/FontGFX}&quot;"/>
 								</option>
 								<inputType id="com.st.stm32cube.ide.mcu.gnu.managedbuild.tool.c.compiler.input.c.1323540392" superClass="com.st.stm32cube.ide.mcu.gnu.managedbuild.tool.c.compiler.input.c"/>
 							</tool>
@@ -469,6 +486,7 @@
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:D:\Dropbox\Actual\Drivers\libs\Micros}&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/STM32_PowerStation/Micros}&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/STM32_PowerStation/GyverButton V3.8}&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/STM32_PowerStation/uTFT2/FontGFX}&quot;"/>
 								</option>
 								<inputType id="com.st.stm32cube.ide.mcu.gnu.managedbuild.tool.cpp.compiler.input.cpp.1603050064" superClass="com.st.stm32cube.ide.mcu.gnu.managedbuild.tool.cpp.compiler.input.cpp"/>
 							</tool>
@@ -524,6 +542,7 @@
 								<option IS_BUILTIN_EMPTY="false" IS_VALUE_EMPTY="false" id="com.st.stm32cube.ide.mcu.gnu.managedbuild.tool.assembler.option.includepaths.512162554" name="Include paths (-I)" superClass="com.st.stm32cube.ide.mcu.gnu.managedbuild.tool.assembler.option.includepaths" valueType="includePath">
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:D:\Dropbox\Actual\Drivers\libs\Micros}&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/STM32_PowerStation/Micros}&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/STM32_PowerStation/uTFT2/FontGFX}&quot;"/>
 								</option>
 								<inputType id="com.st.stm32cube.ide.mcu.gnu.managedbuild.tool.assembler.input.560440943" superClass="com.st.stm32cube.ide.mcu.gnu.managedbuild.tool.assembler.input"/>
 							</tool>
@@ -542,6 +561,7 @@
 									<listOptionValue builtIn="false" value="../Drivers/CMSIS/Include"/>
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:D:\Dropbox\Actual\Drivers\libs\Micros}&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/STM32_PowerStation/Micros}&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/STM32_PowerStation/uTFT2/FontGFX}&quot;"/>
 								</option>
 								<inputType id="com.st.stm32cube.ide.mcu.gnu.managedbuild.tool.c.compiler.input.c.1107292176" superClass="com.st.stm32cube.ide.mcu.gnu.managedbuild.tool.c.compiler.input.c"/>
 							</tool>
@@ -560,6 +580,7 @@
 									<listOptionValue builtIn="false" value="../Drivers/CMSIS/Include"/>
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:D:\Dropbox\Actual\Drivers\libs\Micros}&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/STM32_PowerStation/Micros}&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/STM32_PowerStation/uTFT2/FontGFX}&quot;"/>
 								</option>
 								<inputType id="com.st.stm32cube.ide.mcu.gnu.managedbuild.tool.cpp.compiler.input.cpp.72451547" superClass="com.st.stm32cube.ide.mcu.gnu.managedbuild.tool.cpp.compiler.input.cpp"/>
 							</tool>
@@ -595,6 +616,7 @@
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:D:\Dropbox\Actual\Drivers\libs\Micros}&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/STM32_PowerStation/Micros}&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/STM32_PowerStation/GyverButton V3.8}&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/STM32_PowerStation/uTFT2/FontGFX}&quot;"/>
 								</option>
 								<inputType id="com.st.stm32cube.ide.mcu.gnu.managedbuild.tool.assembler.input.1920838119" superClass="com.st.stm32cube.ide.mcu.gnu.managedbuild.tool.assembler.input"/>
 							</tool>
@@ -608,6 +630,7 @@
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:D:\Dropbox\Actual\Drivers\libs\Micros}&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/STM32_PowerStation/Micros}&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/STM32_PowerStation/GyverButton V3.8}&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/STM32_PowerStation/uTFT2/FontGFX}&quot;"/>
 								</option>
 								<inputType id="com.st.stm32cube.ide.mcu.gnu.managedbuild.tool.c.compiler.input.c.162226045" superClass="com.st.stm32cube.ide.mcu.gnu.managedbuild.tool.c.compiler.input.c"/>
 							</tool>
@@ -621,6 +644,7 @@
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:D:\Dropbox\Actual\Drivers\libs\Micros}&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/STM32_PowerStation/Micros}&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/STM32_PowerStation/GyverButton V3.8}&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/STM32_PowerStation/uTFT2/FontGFX}&quot;"/>
 								</option>
 								<inputType id="com.st.stm32cube.ide.mcu.gnu.managedbuild.tool.cpp.compiler.input.cpp.913828607" superClass="com.st.stm32cube.ide.mcu.gnu.managedbuild.tool.cpp.compiler.input.cpp"/>
 							</tool>
